--- a/social-multiplication/pom.xml
+++ b/social-multiplication/pom.xml
@@ -9,12 +9,12 @@
 	<packaging>jar</packaging>
 
 	<name>social-multiplication-v3</name>
-	<description>Social Multiplication App (Microservices - the Practical Way book)</description>
+	<description>Social Multiplication App (Learn Microservices with Spring Boot)</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.4.RELEASE</version>
+		<version>1.5.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -34,8 +34,10 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.16.12</version>
+			<version>1.16.18</version>
+			<scope>provided</scope>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
